@@ -3,7 +3,7 @@ Tuning Presto
 =============
 
 The default Presto settings should work well for most workloads. The following
-information may help you if your cluster is facing a specific performance problem.
+information may help you, if your cluster is facing a specific performance problem.
 
 Config Properties
 -----------------
@@ -13,7 +13,7 @@ See :doc:`/admin/properties`.
 JVM Settings
 ------------
 
-The following can be helpful for diagnosing GC issues:
+The following can be helpful for diagnosing garbage collection (GC) issues:
 
 .. code-block:: none
 
@@ -30,3 +30,4 @@ The following can be helpful for diagnosing GC issues:
     -XX:+PrintAdaptiveSizePolicy
     -XX:+PrintSafepointStatistics
     -XX:PrintSafepointStatisticsCount=1
+    -Xlog:gc*,safepoint::time,level,tags,tid
